<resources>
    <string name="textEvent">Event</string>
    <string name="mm_dd">mm-dd</string>
    <string name="_00_00">00:00</string>
    <string name="play_stop">play_stop</string>
    <string name="logInfo">logInfo</string>
    <string name="underscore">_ _0</string>
    <string name="km">Km</string>
    <string name="appwidget_text">0</string>
    <string name="zero">0</string>
    <string name="percent">90</string>
    <string name="todo">TODO</string>
    <string name="i_will_back">잠시 꺼둠</string>
    <string name="title_activity_pref_settings">PrefSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>